--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,8 @@
   border: 1px solid #fff;
   width: 300px;
   height: 300px;
+  align-items: center;
+  flex-direction: row;
 }
 
 /* footer section */
